# Foundry

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benchmarks/: bench_binary_size.py  bench_compile_speed.py  bench_parse_speed.py  bench_results.json  bench_startup.py  run_all.py
docs/wiki/: Architecture.md  CSS-Reference.md  How-It-Works.md  Limitations.md  Quick-Start.md  Troubleshooting.md  Use-Cases.md
examples/: counter.html  dashboard.html  showcase.html  todo.html
paper/: foundry.tex
src/: css.rs  events.rs  html.rs  js.rs  layout.rs  lib.rs  main.rs  render.rs  scene.rs  text.rs
tests/: js_api_tests.rs  parser_tests.rs
